<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Parking lot2</string>
    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="se">Search</string>
    <string name="operation">Operation</string>
    <string name="Instructive">Instructive</string>
    <string name="exit">Exit</string>
    <string name="initial">Initial</string>
    <string name="modify">Modify</string>
    <string name="restore">Restore</string>
    <string name="title_activity_conf">Configuration</string>
    <string name="nlug">Number of places</string>
    <string name="cost">Cost per hour</string>
    <string name="pens">pension</string>
    <string name="save">Save</string>
    <string name="er">Please,fill all of the data</string>
    <string name="ok">Done</string>
    <string name="title_activity_conf2">Conf2</string>
    <string name="hello_world">Hello world!</string>
    <string name="er2">The data can´t be 0</string>
    <string name="ingr">In</string>
    <string name="elim">Out</string>
    <string name="list">List</string>
    <string name="Mo">Car Model</string>
    <string name="modif">Modify</string>
    <string name="title_activity_carro_in">Car In</string>
    <string name="plac">Plates</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="pay">payment tipe</string>
    <string name="place">Place</string>
    <string name="pay1">per hour</string>
    <string name="pay2">pension</string>
    <string name="title_activity_carro_out">Car Out</string>
    <string name="vacio"></string>
    <string name="er3">Error,there´s already data,try modify instead</string>
    <string name="er4">Error,there´s no data,try initial instead</string>
    <string name="title_activity_carro_list">CarroList</string>
    <string name="er5">Error,there`s no data in the parking lot</string>
    <string name="el">Delete</string>
    <string name="no">No</string>
    <string name="title_activity_carro_modif">CarroModif</string>
    <string name="nPlac">New place</string>
    <string name="er6">Car data not found</string>
    <string name="title_activity_pag_web">Web Page</string>
    <string name="pag">price to pay:</string>
    <string name="can">Cancelled</string>
      <string name="inic">Create a initial configuration</string>
      <string name="l">You can´t add a place far away than your number of places</string>
      <string name="carr">That car is already inside</string>
      <string name="lugr">That place has been already taken</string>

</resources>
