<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.estac.MainActivity" >

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:text="@string/settings" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="48dp"
        android:text="@string/exit" />

    <Button
        android:id="@+id/btnOperation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnSettings"
        android:layout_alignRight="@+id/btnSettings"
        android:layout_below="@+id/btnSettings"
        android:layout_marginTop="36dp"
        android:text="@string/operation" />

    <Button
        android:id="@+id/btnManu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnOperation"
        android:layout_alignRight="@+id/btnOperation"
        android:layout_below="@+id/btnOperation"
        android:layout_marginTop="27dp"
        android:text="@string/Instructive" />

</RelativeLayout>
