<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CarroModif" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/plac" />

    <EditText
        android:id="@+id/txtPls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtPlm"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="23dp"
        android:ems="10" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtPlm"
        android:layout_centerHorizontal="true"
        android:text="@string/nPlac" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/txtPls"
        android:layout_marginTop="28dp"
        android:text="@string/Mo" />

    <EditText
        android:id="@+id/txtMo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:ems="10">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnPls1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/txtMo"
        android:text="@string/save" />

    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnPls1"
        android:layout_alignBottom="@+id/btnPls1"
        android:layout_alignLeft="@+id/txtMo"
        android:text="@string/se" />

    <EditText
        android:id="@+id/txtPlm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnPls1"
        android:layout_alignLeft="@+id/btnBuscar"
        android:layout_marginBottom="54dp"
        android:ems="10"
        android:inputType="number" />

</RelativeLayout>
