<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.estac.CarroIn" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/plac"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/txtPlac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="32dp"
        android:layout_toRightOf="@+id/textView1"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPlac"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/brand"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/spMar"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/txtlug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spMar"
        android:layout_centerHorizontal="true"
        android:text="@string/model"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/spMod"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/txtlug"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp" />

    <TextView
        android:id="@+id/txtMar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spMod"
        android:layout_below="@+id/spMod"
        android:layout_marginTop="18dp"
        android:text="@string/place"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/txtLug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtMar"
        android:layout_alignBottom="@+id/txtMar"
        android:layout_alignLeft="@+id/txtPlac"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/txtModel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtLug"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/pay" />

    <Spinner
        android:id="@+id/spPay"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/txtModel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp" />

    <Button
        android:id="@+id/btnIn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/txtModel"
        android:text="@string/save" />

</RelativeLayout>
