<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.estac.Conf" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/nlug" />

    <EditText
        android:id="@+id/edLug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edLug"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/cost" />

    <EditText
        android:id="@+id/edCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/edLug"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/txtlug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edCost"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/pens" />

    <Button
        android:id="@+id/btnGua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/save" />

    <EditText
        android:id="@+id/edPens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edCost"
        android:layout_below="@+id/txtlug"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:inputType="number" />

</RelativeLayout>
